--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,93 @@
-#root {
-  max-width: 1280px;
+body {
+  background-image: url("../public/images/mbr-1920x1256.jpg");
+  background-attachment: fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  min-height: 100%;
+  margin-bottom: 100px;
+  
+}
+html {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  box-sizing: border-box;
+  color: white;
+  
+}
+
+*,
+*::before,
+*::after {
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
+  box-sizing: inherit;
+  line-height: 1.3;
+}
+
+h1,
+h2,
+h4,
+h5,
+h6 {
+  padding: 0.2em 1rem;
+  
+}
+
+p {
+  margin: 0 1em 0.5em 1em;
+}
+div {
+  margin-left: 20%;
+  margin-right: 20%;
   text-align: center;
+  
+}
+ol,
+ul {
+  margin: 0em 1rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+li {
+  list-style-position: inside;
+  
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  font-weight: bold;
+  padding: 0.2em;
+  margin: 0.2em;
+  border: 1px solid white;
+  border-radius: 0.3em;
+  background-color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+a {
+  margin: 0.2em;
+  text-decoration: none;
+  font-weight: bold;
+  color: inherit;
 }
-
-.card {
-  padding: 2em;
+input {
+  background-color: white;
 }
-
-.read-the-docs {
-  color: #888;
+.button {
+  font-weight: bold;
+  padding: 0.2em;
+  margin: 0.2em;
+  border: 1px solid white;
+  border-radius: 0.3em;
+  background-color: white;
+}
+.error {
+  display:block;
+  background-color: red;
+  color: black;
+  text-align: left;
+  font-family:Verdana, Geneva, Tahoma, sans-serif,;
+  font-weight: bold;
+  border-radius: 10px;
+  border-style: double;
+  border-color: white;
 }
