--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../public/images/mbr-1920x1256.jpg");
+  background-image: url("../public/images/");
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
