add path routes

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../public/images/");
+  background-image: url("../public/images/film-reel-on-table-free-photo.jpeg");
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
