--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../public/images/film-reel-on-table-free-photo.jpeg");
+  background-image: url("../public/images/622a10bff5b36e745cbdb134d67d4fc9.jpg");
   background-attachment: fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
