--- a/client/src/components/Home/home.module.css
+++ b/client/src/components/Home/home.module.css
@@ -1,5 +1,5 @@
 .home-page h1 {
-    color: white;
+    color:rgb(65, 5, 75);
     font-size: 300%;
     font-size: 55px;
     line-height: 1;
@@ -12,7 +12,7 @@
     margin-top: 10%;
 }
 .home-page h3 {
-    color: #ffffff;
+    color: rgb(217, 205, 230);
     font-size: 100%;
     text-shadow: none;
     line-height: 1;
