--- a/client/src/components/Comments/comments.module.css
+++ b/client/src/components/Comments/comments.module.css
@@ -4,7 +4,7 @@
     text-decoration: none;
     padding-top: 20px;
     border-style: outset;
-    border-color: red;
+    border-color: rgb(237, 231, 240);
     padding-right: 40px;
     padding-left: 20px;
 }
@@ -25,7 +25,7 @@
     text-decoration: none;
     padding-top: 20px;
     border-style: outset;
-    border-color: red;
+    border-color: rgb(231, 165, 24);
     padding-right: 40px;
     padding-left: 20px;
 }
