--- a/client/src/components/AddMovie/addMovie.module.css
+++ b/client/src/components/AddMovie/addMovie.module.css
@@ -1,5 +1,5 @@
 .add-movie h3 {
-    color: #ffffff;
+    color: rgb(231, 165, 24);
     font-size: 300%;
     text-shadow: none;
     line-height: 1;
@@ -21,7 +21,7 @@
     display:inline-block;
     padding-top: 20px;
     border-style: outset;
-    border-color: red;
+    border-color: rgb(231, 165, 24);
     padding-right: 40px;
     padding-left: 20px;
 }
